--- a/4.x/mockwebserver/mockwebserver/okhttp3.mockwebserver/-recorded-request/sequence-number.html
+++ b/4.x/mockwebserver/mockwebserver/okhttp3.mockwebserver/-recorded-request/sequence-number.html
@@ -10,7 +10,7 @@
 <h1>sequenceNumber</h1>
 <a name="okhttp3.mockwebserver.RecordedRequest$sequenceNumber"></a>
 <code><span class="keyword">val </span><span class="identifier">sequenceNumber</span><span class="symbol">: </span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-int/index.html"><span class="identifier">Int</span></a></code>
-<p>The index of this request on its HTTP connection. Since a single HTTP connection may
-serve multiple requests, each request is assigned its own sequence number.</p>
+<p>The index of this request on its HTTP connection. Since a single HTTP connection may serve
+multiple requests, each request is assigned its own sequence number.</p>
 </BODY>
 </HTML>
